--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-# Apache Server Configs v2.11.0 | MIT License
+1# Apache Server Configs v2.11.0 | MIT License
 # https://github.com/h5bp/server-configs-apache
 
 # (!) Using `.htaccess` files slows down Apache, therefore, if you have
@@ -503,7 +503,6 @@ AddDefaultCharset utf-8
 # includes rather private places such as the CMS's directories).
 
 <IfModule mod_autoindex.c>
-	/apps
     Options -Indexes
 </IfModule>
 
